--- a/brown-robinson.ipynb
+++ b/brown-robinson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -118,102 +118,102 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>283</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>5.50</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>3</td>\n",
-       "      <td>720.0</td>\n",
-       "      <td>694.0</td>\n",
-       "      <td>732.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>721.0</td>\n",
-       "      <td>699.0</td>\n",
-       "      <td>721.0</td>\n",
-       "      <td>4.89</td>\n",
-       "      <td>4.98</td>\n",
-       "      <td>5.08</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>3</td>\n",
-       "      <td>729.0</td>\n",
-       "      <td>694.0</td>\n",
-       "      <td>743.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>723.0</td>\n",
-       "      <td>708.0</td>\n",
-       "      <td>721.0</td>\n",
-       "      <td>4.85</td>\n",
-       "      <td>4.95</td>\n",
-       "      <td>5.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>287</th>\n",
+       "      <th>5</th>\n",
        "      <td>1</td>\n",
-       "      <td>736.0</td>\n",
-       "      <td>696.0</td>\n",
-       "      <td>752.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>725.0</td>\n",
-       "      <td>717.0</td>\n",
-       "      <td>721.0</td>\n",
-       "      <td>4.83</td>\n",
-       "      <td>4.93</td>\n",
-       "      <td>5.03</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>5.17</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>289</th>\n",
-       "      <td>1</td>\n",
-       "      <td>743.0</td>\n",
-       "      <td>698.0</td>\n",
-       "      <td>761.0</td>\n",
+       "      <th>7</th>\n",
        "      <td>2</td>\n",
-       "      <td>727.0</td>\n",
-       "      <td>726.0</td>\n",
-       "      <td>721.0</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>4.91</td>\n",
-       "      <td>5.01</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>291</th>\n",
+       "      <th>9</th>\n",
        "      <td>1</td>\n",
-       "      <td>750.0</td>\n",
-       "      <td>700.0</td>\n",
-       "      <td>770.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>27.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>729.0</td>\n",
-       "      <td>735.0</td>\n",
-       "      <td>721.0</td>\n",
-       "      <td>4.79</td>\n",
-       "      <td>4.91</td>\n",
-       "      <td>5.03</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>5.30</td>\n",
+       "      <td>5.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     i    B_1    B_2    B_3  j    A_1    A_2    A_3  v_lower  v_hat  v_upper\n",
-       "283  3  720.0  694.0  732.0  2  721.0  699.0  721.0     4.89   4.98     5.08\n",
-       "285  3  729.0  694.0  743.0  2  723.0  708.0  721.0     4.85   4.95     5.06\n",
-       "287  1  736.0  696.0  752.0  2  725.0  717.0  721.0     4.83   4.93     5.03\n",
-       "289  1  743.0  698.0  761.0  2  727.0  726.0  721.0     4.81   4.91     5.01\n",
-       "291  1  750.0  700.0  770.0  2  729.0  735.0  721.0     4.79   4.91     5.03"
+       "   i   B_1   B_2   B_3  j   A_1   A_2   A_3  v_lower  v_hat  v_upper\n",
+       "1  1   7.0   2.0   9.0  2   2.0   9.0   0.0     2.00   5.50      9.0\n",
+       "3  2   9.0  11.0   9.0  3  11.0   9.0  11.0     4.50   5.00      5.5\n",
+       "5  1  16.0  13.0  18.0  2  13.0  18.0  11.0     4.33   5.17      6.0\n",
+       "7  2  18.0  22.0  18.0  1  20.0  20.0  20.0     4.50   4.75      5.0\n",
+       "9  1  25.0  24.0  27.0  2  22.0  29.0  20.0     4.80   5.30      5.8"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seed = 2024\n",
-    "br_table = BrownRobinson(A, 2024)\n",
-    "br_table.tail()"
+    "my_seed = 2024\n",
+    "br_table = BrownRobinson(A, seed=my_seed)\n",
+    "br_table.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -247,35 +247,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>226</td>\n",
-       "      <td>160</td>\n",
+       "      <td>235</td>\n",
+       "      <td>290</td>\n",
+       "      <td>225</td>\n",
        "      <td>96</td>\n",
-       "      <td>175</td>\n",
-       "      <td>275</td>\n",
+       "      <td>55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>310</td>\n",
-       "      <td>358</td>\n",
-       "      <td>123</td>\n",
-       "      <td>236</td>\n",
-       "      <td>216</td>\n",
+       "      <td>82</td>\n",
+       "      <td>274</td>\n",
+       "      <td>64</td>\n",
+       "      <td>98</td>\n",
+       "      <td>381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>369</td>\n",
-       "      <td>135</td>\n",
-       "      <td>118</td>\n",
-       "      <td>458</td>\n",
-       "      <td>367</td>\n",
+       "      <td>404</td>\n",
+       "      <td>267</td>\n",
+       "      <td>227</td>\n",
+       "      <td>349</td>\n",
+       "      <td>335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>432</td>\n",
-       "      <td>232</td>\n",
-       "      <td>404</td>\n",
-       "      <td>326</td>\n",
-       "      <td>447</td>\n",
+       "      <td>272</td>\n",
+       "      <td>165</td>\n",
+       "      <td>149</td>\n",
+       "      <td>53</td>\n",
+       "      <td>469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -283,10 +283,10 @@
       ],
       "text/plain": [
        "     0    1    2    3    4\n",
-       "0  226  160   96  175  275\n",
-       "1  310  358  123  236  216\n",
-       "2  369  135  118  458  367\n",
-       "3  432  232  404  326  447"
+       "0  235  290  225   96   55\n",
+       "1   82  274   64   98  381\n",
+       "2  404  267  227  349  335\n",
+       "3  272  165  149   53  469"
       ]
      },
      "metadata": {},
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -344,108 +344,108 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>605</th>\n",
-       "      <td>2</td>\n",
-       "      <td>115196.0</td>\n",
-       "      <td>86226.0</td>\n",
-       "      <td>86417.0</td>\n",
-       "      <td>87197.0</td>\n",
-       "      <td>105932.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>42528.0</td>\n",
-       "      <td>86619.0</td>\n",
-       "      <td>39324.0</td>\n",
-       "      <td>86292.0</td>\n",
-       "      <td>284.57</td>\n",
-       "      <td>285.22</td>\n",
-       "      <td>285.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>607</th>\n",
-       "      <td>2</td>\n",
-       "      <td>115506.0</td>\n",
-       "      <td>86584.0</td>\n",
-       "      <td>86540.0</td>\n",
-       "      <td>87433.0</td>\n",
-       "      <td>106148.0</td>\n",
+       "      <th>1591</th>\n",
        "      <td>3</td>\n",
-       "      <td>42624.0</td>\n",
-       "      <td>86742.0</td>\n",
-       "      <td>39442.0</td>\n",
-       "      <td>86696.0</td>\n",
-       "      <td>284.67</td>\n",
-       "      <td>285.00</td>\n",
-       "      <td>285.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>609</th>\n",
+       "      <td>218200.0</td>\n",
+       "      <td>217990.0</td>\n",
+       "      <td>288763.0</td>\n",
+       "      <td>218126.0</td>\n",
+       "      <td>269777.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>115816.0</td>\n",
-       "      <td>86942.0</td>\n",
-       "      <td>86663.0</td>\n",
-       "      <td>87669.0</td>\n",
-       "      <td>106364.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>42720.0</td>\n",
-       "      <td>86865.0</td>\n",
-       "      <td>39560.0</td>\n",
-       "      <td>87100.0</td>\n",
-       "      <td>284.14</td>\n",
-       "      <td>284.86</td>\n",
-       "      <td>285.57</td>\n",
+       "      <td>215177.0</td>\n",
+       "      <td>207919.0</td>\n",
+       "      <td>218515.0</td>\n",
+       "      <td>218343.0</td>\n",
+       "      <td>273.86</td>\n",
+       "      <td>274.19</td>\n",
+       "      <td>274.52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>611</th>\n",
+       "      <th>1593</th>\n",
+       "      <td>3</td>\n",
+       "      <td>218371.0</td>\n",
+       "      <td>218222.0</td>\n",
+       "      <td>289141.0</td>\n",
+       "      <td>218490.0</td>\n",
+       "      <td>270086.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>215523.0</td>\n",
+       "      <td>208073.0</td>\n",
+       "      <td>218747.0</td>\n",
+       "      <td>218674.0</td>\n",
+       "      <td>273.80</td>\n",
+       "      <td>274.13</td>\n",
+       "      <td>274.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1595</th>\n",
+       "      <td>3</td>\n",
+       "      <td>218542.0</td>\n",
+       "      <td>218454.0</td>\n",
+       "      <td>289519.0</td>\n",
+       "      <td>218854.0</td>\n",
+       "      <td>270395.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>215869.0</td>\n",
+       "      <td>208227.0</td>\n",
+       "      <td>218979.0</td>\n",
+       "      <td>219005.0</td>\n",
+       "      <td>273.75</td>\n",
+       "      <td>274.10</td>\n",
+       "      <td>274.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1597</th>\n",
        "      <td>4</td>\n",
-       "      <td>116248.0</td>\n",
-       "      <td>87174.0</td>\n",
-       "      <td>87067.0</td>\n",
-       "      <td>87995.0</td>\n",
-       "      <td>106811.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>42816.0</td>\n",
-       "      <td>86988.0</td>\n",
-       "      <td>39678.0</td>\n",
-       "      <td>87504.0</td>\n",
-       "      <td>284.53</td>\n",
-       "      <td>285.25</td>\n",
-       "      <td>285.96</td>\n",
+       "      <td>219040.0</td>\n",
+       "      <td>218785.0</td>\n",
+       "      <td>289832.0</td>\n",
+       "      <td>218974.0</td>\n",
+       "      <td>270801.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>216215.0</td>\n",
+       "      <td>208381.0</td>\n",
+       "      <td>219211.0</td>\n",
+       "      <td>219336.0</td>\n",
+       "      <td>273.82</td>\n",
+       "      <td>274.17</td>\n",
+       "      <td>274.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>613</th>\n",
+       "      <th>1599</th>\n",
        "      <td>4</td>\n",
-       "      <td>116680.0</td>\n",
-       "      <td>87406.0</td>\n",
-       "      <td>87471.0</td>\n",
-       "      <td>88321.0</td>\n",
-       "      <td>107258.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>42976.0</td>\n",
-       "      <td>87346.0</td>\n",
-       "      <td>39813.0</td>\n",
-       "      <td>87736.0</td>\n",
-       "      <td>284.71</td>\n",
-       "      <td>285.25</td>\n",
-       "      <td>285.79</td>\n",
+       "      <td>219538.0</td>\n",
+       "      <td>219116.0</td>\n",
+       "      <td>290145.0</td>\n",
+       "      <td>219094.0</td>\n",
+       "      <td>271207.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>216481.0</td>\n",
+       "      <td>208763.0</td>\n",
+       "      <td>219575.0</td>\n",
+       "      <td>219456.0</td>\n",
+       "      <td>273.87</td>\n",
+       "      <td>274.17</td>\n",
+       "      <td>274.47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     i       B_1      B_2      B_3      B_4       B_5  j      A_1      A_2  \\\n",
-       "605  2  115196.0  86226.0  86417.0  87197.0  105932.0  2  42528.0  86619.0   \n",
-       "607  2  115506.0  86584.0  86540.0  87433.0  106148.0  3  42624.0  86742.0   \n",
-       "609  2  115816.0  86942.0  86663.0  87669.0  106364.0  3  42720.0  86865.0   \n",
-       "611  4  116248.0  87174.0  87067.0  87995.0  106811.0  3  42816.0  86988.0   \n",
-       "613  4  116680.0  87406.0  87471.0  88321.0  107258.0  2  42976.0  87346.0   \n",
+       "      i       B_1       B_2       B_3       B_4       B_5  j       A_1  \\\n",
+       "1591  3  218200.0  217990.0  288763.0  218126.0  269777.0  2  215177.0   \n",
+       "1593  3  218371.0  218222.0  289141.0  218490.0  270086.0  2  215523.0   \n",
+       "1595  3  218542.0  218454.0  289519.0  218854.0  270395.0  2  215869.0   \n",
+       "1597  4  219040.0  218785.0  289832.0  218974.0  270801.0  2  216215.0   \n",
+       "1599  4  219538.0  219116.0  290145.0  219094.0  271207.0  4  216481.0   \n",
        "\n",
-       "         A_3      A_4  v_lower   v_hat  v_upper  \n",
-       "605  39324.0  86292.0   284.57  285.22   285.87  \n",
-       "607  39442.0  86696.0   284.67  285.00   285.34  \n",
-       "609  39560.0  87100.0   284.14  284.86   285.57  \n",
-       "611  39678.0  87504.0   284.53  285.25   285.96  \n",
-       "613  39813.0  87736.0   284.71  285.25   285.79  "
+       "           A_2       A_3       A_4  v_lower   v_hat  v_upper  \n",
+       "1591  207919.0  218515.0  218343.0   273.86  274.19   274.52  \n",
+       "1593  208073.0  218747.0  218674.0   273.80  274.13   274.46  \n",
+       "1595  208227.0  218979.0  219005.0   273.75  274.10   274.44  \n",
+       "1597  208381.0  219211.0  219336.0   273.82  274.17   274.51  \n",
+       "1599  208763.0  219575.0  219456.0   273.87  274.17   274.47  "
       ]
      },
      "metadata": {},
@@ -453,7 +453,7 @@
     }
    ],
    "source": [
-    "br_table = BrownRobinson(A)\n",
+    "br_table = BrownRobinson(A, seed=my_seed)\n",
     "display(br_table.tail())"
    ]
   }
